fix: implement function truncate to reduce the long message text by ... in contact box

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1107,10 +1107,6 @@ button {
     display: none;
 }
 
-.favourite_user_slider {
-    /* margin: 0; */
-}
-
 .nextArrow,
 .prevArrow {
     position: absolute;
